<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1E1D23">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhoto"
            android:src="@drawable/photo"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            app:civ_border_color="@android:color/transparent"
            app:civ_border_width="0dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/avenir_heavy"
            android:text="@string/full_name"
            android:textColor="#dadcdf"
            android:textSize="25sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/email_address"
            android:textColor="#dadcdf"
            android:textSize="12sp"
            android:textStyle="normal"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="75dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp"
            android:background="#25252f"
            card_view:cardBackgroundColor="#25252f"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/unassigned_asset_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/avenir_heavy"
                    android:text="@string/unassigned"
                    android:textColor="@color/cardHeader"
                    android:textSize="17sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</layout>
